log
Fri 06 Oct 2023 06:30:00 PM UTC: 
 sudoku.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:68:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   68 | int main( int argc, char *argv[])
      |     ^~~~
Compilation failed
1ce5ac7
Fri 06 Oct 2023 06:30:22 PM UTC: 
 sudoku.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  0|5
total_score: 0/70
ec30b89
Fri 06 Oct 2023 06:31:16 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
3656b99
Fri 06 Oct 2023 06:52:59 PM UTC: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
20cc1fb
Fri 06 Oct 2023 06:56:27 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
83983f9
Fri 06 Oct 2023 07:05:50 PM UTC: 
 sudoku.c | 19 ++++++-------------
 1 file changed, 6 insertions(+), 13 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:16: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   62 |             if(node->sudo[i][j] == 0)
      |                ^~~~
      |                Node
sudoku.c:62:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bbd6583
Fri 06 Oct 2023 07:06:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b2f178b
Fri 06 Oct 2023 07:08:12 PM UTC: 
 sudoku.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:19: error: ‘i’ undeclared (first use in this function)
   57 |     for (raw = 0; i < 9; i++)
      |                   ^
sudoku.c:57:19: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:26: error: ‘j’ undeclared (first use in this function)
   59 |         for (column = 0; j < 9; j++)
      |                          ^
Compilation failed
13905ed
Fri 06 Oct 2023 07:08:36 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
dd2860c
Fri 06 Oct 2023 07:15:02 PM UTC: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
361e373
Fri 06 Oct 2023 07:15:22 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d346925
Fri 06 Oct 2023 07:16:58 PM UTC: 
 sudoku.c | 38 ++++++++++----------------------------
 1 file changed, 10 insertions(+), 28 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:48:9: error: unused variable ‘list’ [-Werror=unused-variable]
   48 |   List *list = createList();
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
e7858a9
Fri 06 Oct 2023 07:17:13 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5a33aac
Fri 06 Oct 2023 07:23:18 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:71:11: error: unused variable ‘node’ [-Werror=unused-variable]
   71 |     Node* node = copy(n);
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
5a33aac
Fri 06 Oct 2023 07:23:41 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
69ed583
Fri 06 Oct 2023 07:47:41 PM UTC: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid_helper’:
sudoku.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0c8f24d
Fri 06 Oct 2023 07:50:41 PM UTC: 
 sudoku.c | 26 +-------------------------
 1 file changed, 1 insertion(+), 25 deletions(-)
 tests:  0|5
total_score: 0/70
881f570
Fri 06 Oct 2023 07:51:07 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|0
1e447e5
Fri 06 Oct 2023 07:51:21 PM UTC: 
 sudoku.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  0|0
1e447e5
Fri 06 Oct 2023 07:52:10 PM UTC: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:10: error: unused variable ‘j’ [-Werror=unused-variable]
   64 |   int i, j;
      |          ^
sudoku.c:64:7: error: unused variable ‘i’ [-Werror=unused-variable]
   64 |   int i, j;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
8f9e37c
Fri 06 Oct 2023 07:52:38 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:10: error: unused variable ‘j’ [-Werror=unused-variable]
   64 |   int i, j;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
05e1acf
Fri 06 Oct 2023 07:53:08 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
8d78a2b
Fri 06 Oct 2023 07:54:32 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|5
total_score: 0/70
6198510
Fri 06 Oct 2023 07:55:49 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
7847c60
Fri 06 Oct 2023 07:56:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2aed93d
Fri 06 Oct 2023 07:57:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
177f726
Fri 06 Oct 2023 07:59:29 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
153d50b
Fri 06 Oct 2023 08:00:09 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
f521473
Fri 06 Oct 2023 08:11:23 PM UTC: 
 sudoku.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:27: error: expected identifier before ‘[’ token
   53 |         printf("%i, ", n->[i][j]);
      |                           ^
Compilation failed
6ad2c9d
Fri 06 Oct 2023 08:11:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
83e6236
Fri 06 Oct 2023 08:24:48 PM UTC: 
 sudoku.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_int_arr’:
sudoku.c:51:13: error: ‘__builtin_memset’ writing 36 bytes into a region of size 9 [-Werror=stringop-overflow=]
   51 |     temp[i] = 0;
      |     ~~~~~~~~^~~
sudoku.c:48:15: note: destination object of size 9 allocated by ‘malloc’
   48 |   int* temp = malloc(sizeof(bool) * 9);
      |               ^~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4cb4738
Fri 06 Oct 2023 08:25:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3ac8909
Fri 06 Oct 2023 08:29:05 PM UTC: 
 sudoku.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
cd30601
Fri 06 Oct 2023 08:53:54 PM UTC: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
6e50db5
Fri 06 Oct 2023 08:59:31 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
af939a3
Fri 06 Oct 2023 09:01:35 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|4
total_score: 20/70
a4b5632
